react_webviews/src/common/theme/Style.scss
/* ... */
.common-top-page-subtitle-dark {
  color: #102f50;
  font-size: 16px;
  font-weight: 500;
  margin: -10px 0 30px 0;
  line-height: 1.6;
}

.common-how-steps {
  margin: 50px 0 40px 0;
  border-top: 1px solid #ededed;
  border-bottom: 1px solid #ededed;
  padding: 20px 0 20px 0;

  .top-tile {
    display: flex;
    justify-content: space-between;
  }
  .top-title {
    color: #0a1c32;
    font-size: 16px;
    font-weight: 600;
  }
  .top-icon {
    width: 14px;
  }
  .common-steps-images {
    margin: 40px 0 0 0;
  }
  .common-steps-images_steps{
    margin: 20px 0 0 0;
  }
}

.common-landing-steps {
  margin: 50px 0 40px 0;
  border-top: 1px solid #ededed;
  border-bottom: 1px solid #ededed;
  padding: 20px 0 20px 0;

  .top-tile {
    display: flex;
    justify-content: space-between;
  }
  .top-title {
    color: #0a1c32;
    font-size: 16px;
    font-weight: 600;
  }
  .top-icon {
    width: 14px;
  }
  .common-steps-images {
    margin: 40px 0 0 0;
  }
  .common-steps-images_steps{
    margin: 20px 0 0 0;
  }


  .common-steps-images {

    .tile_step {
      margin: 0px;
    }
    .content_step {
      margin: 0px 0px 0px 20px;
      border-bottom: 1px solid #ededed;
      padding: 20px 0px 20px 0px;
    }
    .content-title{
      margin: 0px;
    }
  }
}

.generic-page-title {
  color: #0a1d32;
  font-size: 16px;
  font-weight: 500;
  margin: 0 0 5px 0;
}

.generic-page-subtitle {
  color: #767e86;
  font-size: 13px;
  font-weight: 400;
  margin: 0px 0 20px 0;
  line-height: 1.6;
}
.common-steps-images {
  .content {
    // color: #767e86;
    // font-size: 13px;
    margin: 0 0 0 20px;
    width: -webkit-fill-available;
  }

  .content_step{
    margin: 0 0 0 10px;
  }

  .tile {
    display: flex;
    align-items: center;
    margin: 30px 0 30px 0px;
  }

  .tile_step{
    margin: 20px 0 20px 0px;
  }

  .content-title {
    color: #041d34;
    font-size: 14px;
    font-weight: 400;
    margin: 0 0 8px 0;
  }

  .content-subtitle {
    color: #747e87;
    font-size: 13px;
    font-weight: 400;
    line-height: 1.6;
  }

 
}

.his {
  margin: 0 -15px 0px -15px;
  padding: 0 15px 0 15px;
  overflow: hidden;
  overflow-x: scroll;
  .horizontal-images-scroll {
    display: flex;
    width: fit-content;
    .image {
      margin: 0 20px 0px 0;
      border-radius: 4px;
      display: block;
    }
  }
}

.advisory-entry-container{
  width: 100%;
  margin: 20px 0;
  position: relative;
  img{
    width: 100%;
    object-fit: cover;
  }
  .advisory-entry-button{
    position: absolute;
    padding: 14px 18px;
    left: 6%;
    top: 58%;
    font-size: 10px;
    font-weight: 900;
    letter-spacing: 0.5px;
    cursor: pointer;
    color: white;
    border: none;
    background-color: #4F2DA7;
    border-radius: 5px;
  }
}

.advisory-landing-container{
  width: 100%;
  height: 100%;
  position: relative;
  img{
    position: relative;
    width: 100%;
    object-fit: cover;
    top: 0;
    left: 0;
  }
  .advisory-entry-hero{
    width: 100%;
    object-fit: cover;
  }
  .advisory-hero-desc{
    color: #767E86;
    margin: 20px 0 30px 0;
    line-height: 20px;
  }
  .advisory-landing-title{
    position: absolute;
    font-family: 'Roboto';
    top: 7%;
    left: 20px;
    font-size: 26px;
    font-weight: bold;
    color: #160D2E;
  }
  .steps-to-follow-container{
    margin-bottom: 50px;
    .FiveStepPlan-Container {
      .FiveStepPlan-title{
        padding: 10px 0;
        font-size: 15px;
        font-family: 'Roboto';
        color:rgb(0, 0, 0)
      }
      .FiveStepPlan-subtitle{
        font-size: 15px !important;
      }
      .FiveStepPlan-Number{
        padding: 6px 10px;
      }
    }
  }
  
}

.advisory-title-container{
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #0A1C32;
  font-weight: 700;
  min-height: 50px;
  font-size: 20px;
  text-align: left;
  transition: 0.3s transform ease-in-out;

  span{
    color: #767E86;
    font-weight: normal;
    font-size: 14px;
    line-height: 20px;
  }
}

.advisory-basic-details-container{
  margin-bottom: 50px;
  .InputField{

    .RadioWithIcon{
      color: #767E86;
    }
  }
  .checkbox-container{
    display: flex;
    align-items: center;
    // margin: -30px 0;
    .checkbox-option{
      transform: translateX(-17px);
      color: #160D2E;
    }
  }
  .advisory-basic-dependents{
    margin-top: -18px;
    .CheckBlock2{
      margin-top: -32px;
    }
    #none-checkbox{
      margin-top: -26px;
    }
    #spouse-checkbox{
      margin-bottom: 10px;
    }

  }
}
.advisory-liability-details-container{
  #loan_amount, #total_amount{
    padding-left: 12.5px;
  }
  .InputField{
    .RadioWithIcon{
      color: #767E86;
    }
  }
}
/* ... */

